<resources>
    <string name="app_name">MarktInHome</string>
    <string name="ellipsis">&#8230;</string>
    <string name="menu_Cart">Cart</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_store">Home</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_you_wait">What You Wait</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Continue">Continue</string>
    <string name="client_id">301662975271-gqq039c035hnbncd5ss71psdhg97b8e2.apps.googleusercontent.com</string>
    <string name="easy_to_hundel">Easy To Hundel</string>
    <string name="froget_password"><u>Forget Password</u></string>
    <string name="i_have_already_account"><u>I have already account</u></string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="cancel">Cancel</string>
    <string name="write">Write</string>
    <string name="Ok">ok</string>
    <string name="product_name">product name</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="change_image">change image</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="product_last_price">product last Price</string>
    <string name="product_price">product Price</string>
    <string name="trademark">trademark</string>
    <string name="uplaod">Uplaod</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="create_by_x_team">Created by X-Team</string>
    <string name="totalPrice">Total Price</string>
    <string name="all_cartegories">All Cartegories</string>
    <string name="filter">filter</string>
    <string name="top_deals">#Top Deals</string>
    <string name="keywords">keywords</string>
    <string name="search_here">Search Here by product name or url</string>
    <string name="_host">www.marktinhome.com</string>
    <string name="recent_search">#recent search</string>
    <string name="edit_on_product">Edit Name of Product</string>
    <string name="edit_on_order">edit on order</string>
    <string name="your_name">your name</string>
    <string name="your_number_phone">your number phone</string>
    <string name="another_number_phone">another number phone</string>
    <string name="your_address_clearly">your address clearly</string>
    <string name="confirm">Confirm</string>
    <string name="my_order">my Order</string>
    <string name="my_recent_order">my recent Order</string>
    <string name="name_button">name button</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="get_my_location">get My Location</string>
    <string name="customer_name">Customer name :</string>
    <string name="customer_phone">Customer Phone :</string>
    <string name="custommer_address">custommer address :</string>
    <string name="another_customer_phone">Another customer Phone :</string>
    <string name="customer_location">Customer Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCImMMkk7IwrWpy3zdbd8Bc1_2DFJgmmTQ</string>
    <string name="type_here">type here ......</string>
    <string name="chat_us">Chat Us</string>
    <string name="connect_us">connect us</string>
    <string name="comment">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="put_you_rate">put you rate ....</string>
    <string name="comments">Comments</string>
    <string name="total_sales">Total Sales</string>
    <string name="_1000">1000$</string>
    <string name="statistices">Statistices</string>
    <string name="orders">Orders</string>
    <string name="name">name</string>
    <string name="best_product_sales">best product sales</string>
    <string name="font_size">Size</string>
    <string name="font_color">Text Color</string>
    <string name="font_spacing">Exact Spacing</string>
    <string name="font_none">none</string>
    <string name="font_highlight_color">Highlight</string>
    <string name="font_default_text">AaBbCcDd</string>
    <string name="font_style_normal">Normal</string>
    <string name="font_style_heading_1">Heading 1</string>
    <string name="font_style_heading_2">Heading 2</string>
    <string name="font_style_heading_3">Heading 3</string>
    <string name="font_insert">Insert</string>
    <string name="edit_hyperlink">Edit Hyperlink</string>
    <string name="address">Address:</string>
    <string name="text_to_display">Text to display:</string>
    <string name="ok">OK</string>
    <string name="edit_table">Edit Table</string>
    <string name="heading_4">Heading 4</string>
    <string name="heading_5">Heading 5</string>
    <string name="heading_6">Heading 6</string>
    <string name="m_rich_editor">MRichEditor</string>
    <string name="cols">Cols</string>
    <string name="rows">Rows</string>
    <string name="typehere">type here.....</string>
    <string name="cantUploadEmpty">you can\'t Upload Empty Data</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add_advertisement">Add Advertisement</string>
    <string name="add_tradmark">Add Tradmark</string>
    <string name="add_products">Add Products</string>
    <string name="option">option</string>
    <string name="groups">Groups</string>
    <string name="history">history</string>
    <string name="creator">creator</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">save</string>
    <string name="my_groups">My Groups</string>
    <string name="action_settings">Setting</string>
    <string name="create">Create</string>
    <string name="add_group">add Group</string>
    <string name="type_a_message">type a message......</string>
    <string name="text_copied">Text copied</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>
    <string name="image">image</string>
    <string name="voice">voice</string>
    <string name="location">location</string>
    <string name="file">file</string>
    <string name="contact">contact</string>
    <string name="video">video</string>
    <string name="offline">offline</string>
    <string name="download">download</string>
    <string name="delete_for_me">delete for me</string>
    <string name="delete_for_everyone">delete for everyone</string>
    <string name="like">like</string>
    <string name="replay">replay</string>
</resources>