<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:background="@null"
                android:id="@+id/et_user_input_bottom_sheet_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:focusedByDefault="true"
                android:hint="@string/edit"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_save_bottom_sheet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_user_input_bottom_sheet_fragment"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/fram_blue"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel_bottom_sheet"
                app:layout_constraintTop_toBottomOf="@+id/et_user_input_bottom_sheet_fragment" />

            <TextView
                android:id="@+id/btn_cancel_bottom_sheet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_user_input_bottom_sheet_fragment"
                android:layout_marginTop="8dp"
                android:layout_toStartOf="@id/btn_save_bottom_sheet"
                android:background="@drawable/fram_blue"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_save_bottom_sheet"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_input_bottom_sheet_fragment" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

