<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="1dp"-->
    <!--        app:cardCornerRadius="10dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/parson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageUser"
            app:layout_constraintTop_toTopOf="@+id/imageUser" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/offwhite"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageUser"
            app:layout_constraintTop_toBottomOf="@+id/userName">

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/comment" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Mon 12/5/2022 12:45"
            android:textAllCaps="false"
            android:textColor="@color/blueDark"
            app:layout_constraintEnd_toEndOf="@+id/cardView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView8"
            app:layout_constraintTop_toBottomOf="@+id/cardView8" />


        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textColor="@color/blueDark"
            app:layout_constraintEnd_toEndOf="@+id/cardView8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/cardView8"
            app:layout_constraintTop_toBottomOf="@+id/cardView8" />

        <ImageView
            android:id="@+id/img_like"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@+id/like"
            app:layout_constraintEnd_toStartOf="@+id/like"
            app:layout_constraintTop_toTopOf="@+id/like" />

        <TextView
            android:id="@+id/replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/replay"
            android:textAllCaps="false"
            android:textColor="@color/blueDark"
            app:layout_constraintEnd_toStartOf="@+id/img_like"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/cardView8" />


        <androidx.core.widget.NestedScrollView
            android:visibility="gone"
            android:id="@+id/nestedScroll"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/replay">

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/RecyclerReplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/replay"
                app:shimmer_recycler_item_count="2"
                tools:itemCount="2"
                tools:listitem="@layout/comment_reply_layout" />
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    </androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>