<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreen.Frgments.Add.UploadFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productImages"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/images" />

            <Button
                android:id="@+id/selectImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="select image"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImages" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                app:layout_constraintTop_toBottomOf="@+id/selectImages" />


            <EditText
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/productLastPrice"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productName" />


            <EditText
                android:id="@+id/productLastPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_last_price"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/productPrice"
                app:layout_constraintTop_toBottomOf="@+id/productName" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productPrice" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/trademark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/trademark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trademark">

                <Button
                    android:id="@+id/addKeywords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Keywords"
                    android:textAllCaps="false"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addKeywords"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/keys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="@+id/addKeywords"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/addKeywords"
                        app:layout_constraintTop_toTopOf="@+id/addKeywords"
                        tools:listitem="@layout/keyword_layout" />

                </androidx.core.widget.NestedScrollView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <RatingBar
                android:id="@+id/ratingSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/keywords" />


            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingSeller">

                <LinearLayout
                    android:id="@+id/addToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/addView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/add_circle" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    </RadioGroup>

                </LinearLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <LinearLayout
                    android:id="@+id/addToggleButtonColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/addViewColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/add_circle" />

                    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                        android:id="@+id/groupColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tbgCheckedButton="@id/choice_a">

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/choice_a"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A" />

                        <com.nex3z.togglebuttongroup.button.CircularToggle
                            android:id="@+id/choice_b"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="B" />

                    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

                </LinearLayout>

            </HorizontalScrollView>

            <FrameLayout
                android:id="@+id/RichTable"
                android:layout_width="match_parent"
                android:layout_height="650dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/Upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uplaod"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>